RESOLVED FIXED 258942
Occasional crash under WebPage::sendEditorStateUpdate() when discarding IME composition
https://bugs.webkit.org/show_bug.cgi?id=258942
Summary Occasional crash under WebPage::sendEditorStateUpdate() when discarding IME c...
Wenson Hsieh
Reported 2023-07-06 12:15:17 PDT
Attachments
Wenson Hsieh
Comment 1 2023-07-06 12:21:51 PDT
EWS
Comment 2 2023-07-06 13:32:00 PDT
Committed 265821@main (b72851e83e5a): <https://commits.webkit.org/265821@main> Reviewed commits have been landed. Closing PR #15606 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.