Source/WebCore/page/EditorClient.h
@@ -41,6 +41,7 @@ enum class DOMPasteAccessCategory : uint8_t;
 enum class DOMPasteAccessResponse : uint8_t;
 
 class SharedBuffer;
+class Document;
 class DocumentFragment;
 class Element;
 class KeyboardEvent;
@@ -108,7 +109,7 @@ public:
 
     // Notify an input method that a composition was voluntarily discarded by WebCore, so that it could clean up too.
     // This function is not called when a composition is closed per a request from an input method.
-    virtual void discardedComposition(LocalFrame*) = 0;
+    virtual void discardedComposition(const Document&) = 0;
     virtual void canceledComposition() = 0;
     virtual void didUpdateComposition() = 0;
 
